# seri

./: README.md  pyproject.toml
seri/: fields.py  serializers.py
tests/: test_fields.py  test_serializers.py
