[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "seri"
version = "0.0.0"
authors = [
  { name="aroxby", email="aroxby@users.noreply.github.com" },
]
description = "A Python package for serializing and deserializing complex data structures to binary files."
readme = "README.md"
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/your-username/seri"